Fix amount flickering

--- a/widget/src/less/form-group.less
+++ b/widget/src/less/form-group.less
@@ -37,6 +37,10 @@
 
   select& {
     padding: 6px 10px;
+    &:disabled {
+      -webkit-appearance: none;
+      appearance: none;
+    }
   }
 
   &:focus {
